# ProgramacionAvanzada

./: CMakeLists.txt  main.cpp
00_EjemploBasico/: Mascota.cpp  Mascota.h
01_EjemploBasicoObjeto/: Persona.cpp  Persona.h
02_EjemploBasicoConstructor/: Automovil.cpp  Automovil.h
03_EjemploMiembroDeClase/: Computador.cpp  Computador.h
Dis_EjemploArquitecturaLogin/: CMakeLists.txt
Dis_EjemploArquitecturaLogin/src/logica/controlador/: SistemaControlador.cpp  SistemaControlador.h
Dis_EjemploArquitecturaLogin/src/logica/dominio/: LoginUsr.cpp  LoginUsr.h
EjemploBasicoImplementacionLab/: CMakeLists.txt
EjemploBasicoImplementacionLab/negocio/controller/: IEjercicioController.cpp  IUsuarioController.cpp  Sistema.cpp  Sistema.h
EjemploBasicoImplementacionLab/negocio/dominio/: Idioma.cpp  Idioma.h  Usuario.h
EjemploICollections/: CMakeLists.txt
EjemploICollections/ejemplos/: Usuario.cpp  Usuario.h  main.cpp
Ejemplo_04_AsociacionMultiplicadad_1/: Casa.cpp  Casa.h  Person.cpp  Person.h
Ejemplo_05_AsociacionMultiplicidadN/: Biblioteca.cpp  Biblioteca.h  Libro.cpp  Libro.h
Ejemplo_06_HerenciaSobreescrituaIntercambiabilidad/: Animal.cpp  Animal.h  Gato.cpp  Gato.h  Mamifero.cpp  Mamifero.h  Perro.cpp  Perro.h
Ejemplo_07_EjemploPolimorfismo_1/: Adulto.cpp  Adulto.h  Niño.cpp  Niño.h  PersonaPoli.cpp  PersonaPoli.h
Ejemplo_08_EjemploPolimorfismo_2/: Figura.cpp  Figura.h  Rectangulo.cpp  Rectangulo.h  Triangulo.cpp  Triangulo.h
Ejemplo_09_EliminacionAsociacionBidireccional/: Curso.cpp  Curso.h  Estudiante.cpp  Estudiante.h
Ejemplo_10_GeneracionParcialDeCodigo/negocio/: DTInfo.cpp  DTInfo.h  ISistema.h  Sistema.cpp  Sistema.h
Ejemplo_10_GeneracionParcialDeCodigo/presentacion/: PantallaCasoDeUso1.cpp  PantallaCasoDeUso1.h
Ejemplo_MemoryLeak/: README.txt  ejemplo  ejemploMemoryLeak.cpp
Laboratorio4Ejemplo/: CMakeLists.txt
Laboratorio4Ejemplo/presentacion/: Ejemplo.cpp  Ejemplo.h
Practico4_ejercicio3/: CMakeLists.txt
Practico4_ejercicio3/negocio/: ClaseA.cpp  ClaseA.h  ClaseB.cpp  ClaseB.h  ClaseR.cpp  ClaseR.h  Controlador.cpp  Controlador.h  ISistema.h
Practico4_ejercicio3/presentacion/: main.cpp
untitled/: main.cpp
