cmake_minimum_required(VERSION 3.30)
project(EjemploBasicoImplementacionLab)

set(CMAKE_CXX_STANDARD 20)

add_executable(EjemploBasicoImplementacionLab 07_EjemploImplementacionLab.cpp
        presentacion/AltaUsuario.cpp
        presentacion/AltaUsuario.h
        presentacion/MenuPpal.cpp
        presentacion/MenuPpal.h
        presentacion/RealizarEjercicio.cpp
        presentacion/RealizarEjercicio.h
        negocio/controller/IEjercicio.h
        negocio/controller/IEjercicioController.cpp
        negocio/controller/IEjercicioController.h
        negocio/controller/IUsuario.h
        negocio/controller/IUsuarioController.cpp
        negocio/controller/IUsuarioController.h
        negocio/controller/Sistema.cpp
        negocio/controller/Sistema.h
        negocio/dominio/Estudiante.cpp
        negocio/dominio/Estudiante.h
        negocio/dominio/Idioma.cpp
        negocio/dominio/Idioma.h
        negocio/dominio/Profesor.cpp
        negocio/dominio/Profesor.h
        negocio/dominio/Usuario.cpp
        negocio/dominio/Usuario.h
        negocio/dto/DTOEstudiante.cpp
        negocio/dto/DTOEstudiante.h
        negocio/dto/DTOProfesor.h
        negocio/dto/DTOProfesor.cpp
        negocio/dto/DTOUsuario.cpp
        negocio/dto/DTOUsuario.h
        negocio/libreria/collections/List.cpp
        negocio/libreria/collections/List.h
        negocio/libreria/collections/ListIterator.cpp
        negocio/libreria/collections/ListIterator.h
        negocio/libreria/collections/ListNode.cpp
        negocio/libreria/collections/ListNode.h
        negocio/libreria/collections/OrderedDictionary.cpp
        negocio/libreria/collections/OrderedDictionary.h
        negocio/libreria/collections/OrderedDictionaryEntry.cpp
        negocio/libreria/collections/OrderedDictionaryEntry.h
        negocio/libreria/interfaces/ICollectible.cpp
        negocio/libreria/interfaces/ICollectible.h
        negocio/libreria/interfaces/ICollection.cpp
        negocio/libreria/interfaces/ICollection.h
        negocio/libreria/interfaces/IDictionary.cpp
        negocio/libreria/interfaces/IDictionary.h
        negocio/libreria/interfaces/IIterator.cpp
        negocio/libreria/interfaces/IIterator.h
        negocio/libreria/interfaces/IKey.cpp
        negocio/libreria/interfaces/IKey.h
        negocio/libreria/interfaces/OrderedKey.cpp
        negocio/libreria/interfaces/OrderedKey.h
        negocio/libreria/String.cpp
        negocio/libreria/String.h
        negocio/libreria/Integer.cpp
        negocio/libreria/Integer.h
)
